--- a/horror/v1/index.html
+++ b/horror/v1/index.html
@@ -33,7 +33,7 @@
     <h3 style="margin:0 0 10px;">Config</h3>
 
     <label for="webAppUrl">WEB_APP_URL (deve finire con /exec)</label>
-    <input id="webAppUrl" placeholder="https://script.google.com/macros/s/AKfycbzbe3pn8C39yUrQAX0Tdd3VSk93Y8pTNyV576VQ3xXjkT2RUehYST3f3fL6ix3v7VqLFg/exec/>
+    <input id="webAppUrl" value="https://script.google.com/macros/s/AKfycbzbe3pn8C39yUrQAX0Tdd3VSk93Y8pTNyV576VQ3xXjkT2RUehYST3f3fL6ix3v7VqLFg/exec" />
 
     <label for="apiKey">apiKey (solo per insert/update/delete/getById)</label>
     <input id="apiKey" placeholder="CHANGE_ME_WRITE_KEY_2026" />
