--- a/horror/v1/index.html
+++ b/horror/v1/index.html
@@ -39,7 +39,9 @@
     inputmode="url"
     autocomplete="off"
     spellcheck="false"
-    value="https://script.google.com/macros/s/AKfycbzbe3pn8C39yUrQAX0Tdd3VSk93Y8pTNyV576VQ3xXjkT2RUehYST3f3fL6ix3v7VqLFg/exec"
+    value="https://script.google.com/a/macros/studiogb.org/s/AKfycbz6a4VKpGthr2Gq3wf_rvTk_D3p2yrBkVpgs6b0pXUXgxENU_4jgNkda0ybaMmYvsob/exec"
+  
+   
   />
 
   <label for="apiKey">apiKey (solo per insert/update/delete/getById)</label>
