--- a/horror/v1/index.html
+++ b/horror/v1/index.html
@@ -39,7 +39,7 @@
     inputmode="url"
     autocomplete="off"
     spellcheck="false"
-    value="https://script.google.com/a/macros/studiogb.org/s/AKfycbz6a4VKpGthr2Gq3wf_rvTk_D3p2yrBkVpgs6b0pXUXgxENU_4jgNkda0ybaMmYvsob/exec"
+    value="https://script.google.com/macros/s/AKfycbwdA3C2dE4jSZTbD428nmcI06OuEcZ_YgWQZGkY2g5ur97UK4ZxiOYPOJID5zwLaMCp/exec"
   
    
   />
